--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/Jetsly/jetsly.github.io/issues"
   },
-  "homepage": "https://github.com/Jetsly/jetsly.github.io#readme"
+  "homepage": "https://github.com/Jetsly/jetsly.github.io#readme",
+  "devDependencies": {
+    "webpack": "^2.6.1"
+  }
 }
