--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "npm test",
-    "publish":"git checkout master && git checkout develop ./docs"
+    "start": "npm run dev",
+    "dev": "node scripts/exec.js dev",
+    "build": "node scripts/exec.js build",
+    "test": "node scripts/exec.js test"
   },
   "repository": {
     "type": "git",
@@ -18,6 +20,42 @@
   },
   "homepage": "https://github.com/Jetsly/tools#readme",
   "devDependencies": {
-    "webpack": "^2.6.1"
+    "autoprefixer": "^7.1.1",
+    "babel-eslint": "^7.2.3",
+    "babel-loader": "^7.0.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-register": "^6.24.1",
+    "chalk": "^1.1.3",
+    "css-loader": "^0.28.4",
+    "eslint": "^3.19.0",
+    "eslint-config-vue": "^2.0.2",
+    "eslint-friendly-formatter": "^3.0.0",
+    "eslint-loader": "^1.7.1",
+    "eslint-plugin-html": "^2.0.3",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-vue": "^2.0.1",
+    "express": "^4.15.3",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "html-webpack-plugin": "^2.28.0",
+    "node-sass": "^4.5.3",
+    "pug": "^2.0.0-rc.1",
+    "pug-loader": "^2.3.0",
+    "sass-loader": "^6.0.5",
+    "shelljs": "^0.7.7",
+    "vue-loader": "^12.2.1",
+    "vue-template-compiler": "^2.3.3",
+    "webpack": "^2.6.1",
+    "webpack-config": "^7.0.0",
+    "webpack-dev-middleware": "^1.10.2",
+    "webpack-hot-middleware": "^2.18.0"
+  },
+  "dependencies": {
+    "core-js": "^2.4.1",
+    "vue": "^2.3.3",
+    "vue-router": "^2.5.3",
+    "vuex": "^2.3.1",
+    "whatwg-fetch": "^2.0.3"
   }
 }
