--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
   "dependencies": {
     "core-js": "^2.4.1",
     "vue": "^2.3.3",
+    "vue-awesome": "^2.3.1",
     "vue-router": "^2.5.3",
     "vuex": "^2.3.1",
     "whatwg-fetch": "^2.0.3"
