--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
   },
   "dependencies": {
     "core-js": "^2.4.1",
+    "jszip": "^3.1.3",
+    "pixi.js": "^4.5.3",
     "vue": "^2.3.3",
     "vue-awesome": "^2.3.1",
     "vue-router": "^2.5.3",
