--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "eslint-plugin-vue": "^2.0.1",
     "express": "^4.15.3",
     "extract-text-webpack-plugin": "^2.1.0",
+    "file-loader": "^0.11.2",
     "html-webpack-plugin": "^2.28.0",
     "node-sass": "^4.5.3",
     "pug": "^2.0.0-rc.1",
@@ -52,6 +53,7 @@
     "webpack-hot-middleware": "^2.18.0"
   },
   "dependencies": {
+    "aframe": "^0.6.1",
     "core-js": "^2.4.1",
     "jszip": "^3.1.3",
     "pixi.js": "^4.5.3",
