--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,17 @@
 {
   "presets": [
-    ["es2015", { "modules": false }],"stage-0"
+    ["env", {
+      "modules": false,
+      "targets": {
+        "browsers": ["last 2 versions", "safari >= 7"]
+      }
+    }], "stage-0"
+  ],
+  "plugins": [
+    ["transform-runtime", {
+      "helpers": false,
+      "polyfill": false,
+      "regenerator": true
+    }]
   ]
 }
