--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "npm run dev",
-    "dev": "node scripts/exec.js dev",
-    "build": "node scripts/exec.js build",
-    "test": "node scripts/exec.js test"
+    "dev": "ddotjs serv -f config/webpack.dev.conf.js",
+    "build": "ddotjs build -f config/webpack.prod.conf.js"
   },
   "repository": {
     "type": "git",
@@ -21,12 +20,13 @@
   "homepage": "https://github.com/Jetsly/tools#readme",
   "devDependencies": {
     "autoprefixer": "^7.1.1",
+    "babel-core": "^6.25.0",
     "babel-eslint": "^7.2.3",
     "babel-loader": "^7.0.0",
     "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "babel-register": "^6.24.1",
     "chalk": "^1.1.3",
     "css-loader": "^0.28.4",
     "eslint": "^3.19.0",
@@ -36,20 +36,15 @@
     "eslint-plugin-html": "^2.0.3",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-vue": "^2.0.1",
-    "express": "^4.15.3",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.2",
     "html-webpack-plugin": "^2.28.0",
     "node-sass": "^4.5.3",
-    "pug": "^2.0.0-rc.1",
-    "pug-loader": "^2.3.0",
     "sass-loader": "^6.0.5",
-    "shelljs": "^0.7.7",
     "vue-loader": "^12.2.1",
     "vue-template-compiler": "^2.3.3",
     "webpack": "^2.6.1",
     "webpack-config": "^7.0.0",
-    "webpack-dev-middleware": "^1.10.2",
     "webpack-hot-middleware": "^2.18.0"
   },
   "dependencies": {
