--- a/package.json
+++ b/package.json
@@ -29,13 +29,13 @@
     "babel-preset-stage-0": "^6.24.1",
     "chalk": "^1.1.3",
     "css-loader": "^0.28.4",
-    "eslint": "^3.19.0",
-    "eslint-config-vue": "^2.0.2",
-    "eslint-friendly-formatter": "^3.0.0",
-    "eslint-loader": "^1.7.1",
-    "eslint-plugin-html": "^2.0.3",
-    "eslint-plugin-promise": "^3.5.0",
-    "eslint-plugin-vue": "^2.0.1",
+    "eslint": "^4.4.1",
+    "eslint-config-standard": "^6.2.1",
+    "eslint-friendly-formatter": "^2.0.7",
+    "eslint-loader": "^1.6.1",
+    "eslint-plugin-html": "^3.2.0",
+    "eslint-plugin-promise": "^3.4.2",
+    "eslint-plugin-standard": "^2.0.1",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.2",
     "html-webpack-plugin": "^2.28.0",
