--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "npm run dev",
-    "dev": "ddotjs serv -f config/webpack.dev.conf.js",
-    "build": "ddotjs build -f config/webpack.prod.conf.js"
+    "dev": "ddotjs serv",
+    "build": "ddotjs build"
   },
   "repository": {
     "type": "git",
@@ -20,32 +20,10 @@
   "homepage": "https://github.com/Jetsly/tools#readme",
   "devDependencies": {
     "autoprefixer": "^7.1.1",
-    "babel-core": "^6.25.0",
-    "babel-eslint": "^7.2.3",
-    "babel-loader": "^7.0.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "chalk": "^1.1.3",
-    "css-loader": "^0.28.4",
-    "eslint": "^4.4.1",
-    "eslint-config-standard": "^6.2.1",
-    "eslint-friendly-formatter": "^2.0.7",
-    "eslint-loader": "^1.6.1",
-    "eslint-plugin-html": "^3.2.0",
-    "eslint-plugin-promise": "^3.4.2",
-    "eslint-plugin-standard": "^2.0.1",
-    "extract-text-webpack-plugin": "^2.1.0",
-    "file-loader": "^0.11.2",
-    "html-webpack-plugin": "^2.28.0",
-    "node-sass": "^4.5.3",
-    "sass-loader": "^6.0.5",
-    "vue-loader": "^12.2.1",
-    "vue-template-compiler": "^2.3.3",
-    "webpack": "^2.6.1",
-    "webpack-config": "^7.0.0",
-    "webpack-hot-middleware": "^2.18.0"
+    "babel-preset-stage-0": "^6.24.1"
   },
   "dependencies": {
     "aframe": "^0.6.1",
